# ubuntu-install-scripts

./: app-installs.sh  colmak-dh.yaml  cuda_install.sh  pyproject.toml  xremap.service
workstation-setup/: site.yml
workstation-setup/roles/base-packages/tasks/: main.yml
workstation-setup/roles/chrome/tasks/: main.yml
workstation-setup/roles/discord/tasks/: main.yml
workstation-setup/roles/docker/tasks/: main.yml
workstation-setup/roles/gnome/tasks/: main.yml
workstation-setup/roles/gp7/tasks/: main.yml
workstation-setup/roles/jack/tasks/: main.yml
workstation-setup/roles/keepassxc/tasks/: main.yml
workstation-setup/roles/multimedia/tasks/: main.yml
workstation-setup/roles/reaper/tasks/: main.yml
workstation-setup/roles/rust/tasks/: main.yml
workstation-setup/roles/spotify/tasks/: main.yml
workstation-setup/roles/steam/tasks/: main.yml
workstation-setup/roles/uv/tasks/: main.yml
workstation-setup/roles/vscode/tasks/: main.yml
workstation-setup/roles/wine/tasks/: main.yml
workstation-setup/roles/xremap/files/: colmak-dh.yaml  xremap.service
workstation-setup/roles/xremap/tasks/: main.yml
workstation-setup/roles/yabridge/tasks/: main.yml
