[tool.poetry]
name = "style-transfer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "style_transfer"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-gpu = "^2.11.0"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
Pillow = "^9.3.0"
jupyter = "^1.0.0"
tensorflow-hub = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
